package Laba4.MotorDepot;

public enum CarStatus {
    Flight,
    Repair,
    Base,
    None,
}
