@startuml

title UML Diagram\n

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Axi {
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Comment {
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Curve {
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Dot {
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      abstract class com.company.Graph.Graph {
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Grid {
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Window {
      }
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    namespace bus {
      class com.company.bus.Bus {
      }
    }
  }
  

  namespace com.company {
    namespace car {
      abstract class com.company.car.Car {
      }
    }
  }
  

  namespace com.company {
    namespace car {
      namespace ase {
        class com.company.carbase.CarBase {
        }
      }
    }
  }
  

  namespace com.company {
    namespace car {
      namespace ase {
        enum CarStatus {
        }
      }
    }
  }
  

  namespace com.company {
    namespace complex {
      class com.company.complex.Complex {
      }
    }
  }
  

  namespace com.company {
    namespace complex {
      class com.company.complex.HyperbolicCalc {
      }
    }
  }
  

  namespace com.company {
    namespace engine {
      class com.company.engine.Engine {
      }
    }
  }
  

  namespace com.company {
    namespace firecar {
      class com.company.firecar.FireEngine {
      }
    }
  }
  

  namespace com.company {
    namespace passenger {
      class com.company.passenger.Passenger {
      }
    }
  }
  

  namespace com.company {
    namespace truck {
      class com.company.truck.Truck {
      }
    }
  }
  

  com.company.Graph.Axi -up-|> com.company.Graph.Graph
  com.company.Graph.Axi o-- com.company.Graph.Dot : A
  com.company.Graph.Axi o-- com.company.Graph.Dot : B
  com.company.Graph.Comment -up-|> com.company.Graph.Graph
  com.company.Graph.Curve -up-|> com.company.Graph.Graph
  com.company.Graph.Dot -up-|> com.company.Graph.Graph
  com.company.Graph.Grid -up-|> com.company.Graph.Graph
  com.company.Graph.Window o-- com.company.Graph.Grid : grid
  com.company.bus.Bus -up-|> com.company.car.Car
  com.company.car.Car o-- com.company.car.Car.ColorsCar : color
  com.company.car.Car o-- com.company.engine.Engine : engine
  com.company.firecar.FireEngine -up-|> com.company.car.Car
  com.company.passenger.Passenger -up-|> com.company.car.Car
  com.company.truck.Truck -up-|> com.company.car.Car


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
